site outline, added images

--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,18 @@
 # SITE CONFIGURATION
-baseurl: "/Type-on-Strap"
+baseurl: "/home" #"/Type-on-Strap"
 url: "https://sylhare.github.io"
 
 # THEME-SPECIFIC CONFIGURATION
-title: Type on Strap                                    # site's title
-description: "A website with blog posts and pages"      # used by search engines
-avatar: assets/img/triangle.png                         # Empty for no avatar in navbar
+title: Antares Technology                               # site's title
+description: "Servicios de ingenieria y marketing"      # used by search engines
+avatar: assets/img/logo-small.jpeg                         # Empty for no avatar in navbar
 favicon: assets/favicon.ico                             # Icon displayed in the tab
 
 # Header and footer text
-header_text: Change <code>header_text</code> in <code>_config.yml</code>  # Change Blog header text
-header_feature_image: assets/img/header/triangular.jpeg
-header_feature_image_responsive: true
-footer_text: >
-  Powered by <a href="https://jekyllrb.com/">Jekyll</a> with <a href="https://github.com/sylhare/Type-on-Strap">Type on Strap</a>
+header_text: Artículos  # Change Blog header text
+header_feature_image: assets/img/header/laptop.jpg
+header_feature_image_responsive: false
+footer_text: <p><b>Antares Technology</b></br>Beyond the stars</p>
 
 # Blog
 excerpt: true                                           # Or "truncate" (first 250 characters), "false" to disable
@@ -54,4 +53,4 @@ plugins: [jekyll-paginate, jekyll-seo-tag, jekyll-feed]
 exclude: [".jekyll-cache", ".jekyll-metadata", ".idea", "vendor/*", "assets/node_modules/*"]
 
 # theme: type-on-strap                                  # if using the theme as a jekyll theme gem
-remote_theme: sylhare/Type-on-Strap                     # If using as a remote_theme in github
+# remote_theme: sylhare/Type-on-Strap                     # If using as a remote_theme in github
