--- a/_data/icons.yml
+++ b/_data/icons.yml
@@ -4,26 +4,26 @@ behance:
 bitbucket:
 calendly:
 dribbble:
-facebook:
+facebook:		  AntaresTechnology.ve?mibextid=ZbWKwL
 flickr:
-github: sylhare
+github: 		  raulg-cpp
 gitlab:
 google-scholar:   # e.g. "WXAAOb0AAAAJ"
-instagram:
+instagram: 		  antarestechnology.ve
 hacker-news:
 keybase:
 linkedin:
-mail:             # e.g. "sam@mail.com"
+mail:             antarestechnologyonline@gmail.com
 map:              # e.g. "34.0886/-118.3191"
 mastodon:         # e.g. "fostodon.org/@sam"
 matrix:           # e.g. "@sam:matrix.org"
 medium:
 patreon:
-phone:            # e.g. "+11111111111"
+phone:            "+584264133405"
 pinterest:
 reddit:
 soundcloud:
-sms:              # e.g. "+11111111111"
+sms:              "+584120626412"
 stack-exchange:   # e.g. "123456789"
 stack-overflow:   # e.g. "123456789"
 steam:
