--- a/_data/language.yml
+++ b/_data/language.yml
@@ -1,22 +1,22 @@
 # Localization strings
-str_follow_on: "Follow on"
-str_rss_follow: "Follow RSS feed"
-str_share_on: "Share on"
-str_add_to: "Add to"
+str_follow_on: "Seguir en"
+str_rss_follow: "Seguir RSS feed"
+str_share_on: "Compartir en"
+str_add_to: "Añadir a"
 str_email: "Email"
 str_tweet: "Tweet"
-str_pin_it: "Pin it"
-str_next_post: "Next post"
-str_previous_post: "Previous post"
-str_next_page: "Next"
-str_previous_page: "Prev"
-str_javascript_required_disqus: "Please enable JavaScript to view comments."
-str_no_result_found: "No result found"
-str_cookie_approve: "Approve"
-str_cookie_disclaimer: "We would like to use third party cookies and scripts to improve the functionality of this website."
-str_months: [January, February, March, April, May, June, July, August, September, October, November, December]
-str_dark: 'Dark'
-str_light: 'Light'
+str_pin_it: "Anclar"
+str_next_post: "Artículo siguiente"
+str_previous_post: "Artículo anterior"
+str_next_page: "Siguiente"
+str_previous_page: "Anterior"
+str_javascript_required_disqus: "Por favor habilitar JavaScript para ver comentarios."
+str_no_result_found: "Sin resultados"
+str_cookie_approve: "Aprobado"
+str_cookie_disclaimer: "Nos gustaría usar cookies y scripts de terceros para mejorar la funcionalidad de esta página." 
+str_months: [Enero,Febrero, Marzo, Abril, Mayo, Junio, Julio, Agosto, Septiembre, Octubre, Noviembre, Diciembre]
+str_dark: 'Oscuro'
+str_light: 'Claro'
 
 # Localization settings
-cusdis_lang: # zh-cn, es, tr, pt-BR
+cusdis_lang: es # zh-cn, es, tr, pt-BR
