--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: "https://sylhare.github.io"
 # THEME-SPECIFIC CONFIGURATION
 title: Antares Technology                               # site's title
 description: "Servicios de ingenieria y marketing"      # used by search engines
-avatar: assets/img/logo-small.jpeg                         # Empty for no avatar in navbar
+avatar: assets/img/logo-small.png                         # Empty for no avatar in navbar
 favicon: assets/favicon.ico                             # Icon displayed in the tab
 
 # Header and footer text
