added video, formatting, more translation

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,8 +1,8 @@
 raul_gonzalez: # author-id
   name: "Raul Gonzalez"
-  avatar: "https://avatars2.githubusercontent.com/u/816965?s=460&v=4"
-  url: "https://github.com/rohanchandra"
+  avatar: "https://avatars.githubusercontent.com/u/126015052?v=4"
+  url: "https://github.com/raulg-cpp"
 fernando_canchica:
   name: "Fernando Canchica"
   avatar: "https://avatars3.githubusercontent.com/u/20642750?s=460&v=4"
-  url: "https://github.com/sylhare"
+  url: 
