--- a/_data/icons.yml
+++ b/_data/icons.yml
@@ -4,12 +4,12 @@ behance:
 bitbucket:
 calendly:
 dribbble:
-facebook:		  AntaresTechnology.ve?mibextid=ZbWKwL
+facebook:         AntaresTechnology.ve?mibextid=ZbWKwL
 flickr:
-github: 		  raulg-cpp
+github:           raulg-cpp
 gitlab:
 google-scholar:   # e.g. "WXAAOb0AAAAJ"
-instagram: 		  antarestechnology.ve
+instagram:        antarestechnology.ve
 hacker-news:
 keybase:
 linkedin:
@@ -35,3 +35,4 @@ vimeo:
 vk:
 wordpress:
 youtube:          # e.g. "UCqECaJ8Gagnn7YCbPEzWH6g"
+whatsapp:        "+584120626412"
