--- a/_data/icons.yml
+++ b/_data/icons.yml
@@ -14,7 +14,7 @@ hacker-news:
 keybase:
 linkedin:
 mail:             antarestechnologyonline@gmail.com
-map:              # e.g. "34.0886/-118.3191"
+map:              "10.490017/-66.854183"	# e.g. "34.0886/-118.3191"
 mastodon:         # e.g. "fostodon.org/@sam"
 matrix:           # e.g. "@sam:matrix.org"
 medium:
