add tiktok footer, tools page

--- a/_data/icons_builder.yml
+++ b/_data/icons_builder.yml
@@ -82,3 +82,5 @@ youtube:
   pre: "https://www.youtube.com/channel/"
 whatsapp:
   pre: "https://wa.me/"
+tiktok: 
+  pre: "https://www.tiktok.com/@"
