--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # SITE CONFIGURATION
-baseurl: "/home" #"/Type-on-Strap"
+baseurl: #"/Type-on-Strap"
 url: "https://sylhare.github.io"
 
 # THEME-SPECIFIC CONFIGURATION
