--- a/_data/icons.yml
+++ b/_data/icons.yml
@@ -6,7 +6,7 @@ calendly:
 dribbble:
 facebook:         AntaresTechnology.ve?mibextid=ZbWKwL
 flickr:
-github:           raulg-cpp
+github:           # raulg-cpp
 gitlab:
 google-scholar:   # e.g. "WXAAOb0AAAAJ"
 instagram:        antarestechnology.ve
@@ -36,3 +36,4 @@ vk:
 wordpress:
 youtube:          # e.g. "UCqECaJ8Gagnn7YCbPEzWH6g"
 whatsapp:        "+584120626412"
+tiktok:          "jdenlanotaa"
