update social media

--- a/_data/icons.yml
+++ b/_data/icons.yml
@@ -4,16 +4,16 @@ behance:
 bitbucket:
 calendly:
 dribbble:
-facebook:         AntaresTechnology.ve?mibextid=ZbWKwL
+facebook:         "AntaresTechnology.ve?mibextid=ZbWKwL"
 flickr:
-github:           raulg-cpp
+github:           "raulg-cpp"
 gitlab:
 google-scholar:   # e.g. "WXAAOb0AAAAJ"
-instagram:        antarestechnology.ve
+instagram:        "antarestechnologyonline"
 hacker-news:
 keybase:
 linkedin:
-mail:             antarestechnologyonline@gmail.com
+mail:             "antarestechnologyonline@gmail.com"
 map:              "10.490017/-66.854183"	# e.g. "34.0886/-118.3191"
 mastodon:         # e.g. "fostodon.org/@sam"
 matrix:           # e.g. "@sam:matrix.org"
@@ -34,6 +34,6 @@ twitter:
 vimeo:
 vk:
 wordpress:
-youtube:         "ciudadanosdelmundo5448" # username
+youtube:         #"ciudadanosdelmundo5448" # username
 whatsapp:        "+584120626412"
-tiktok:          "jdenlanotaa"
+tiktok:          "antares.technology"
